[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "w3plex"
authors = [
    {name = "cheewba", email = "chewba34@gmail.com"},
]
description = "Web3 multi-processor"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "loguru~=0.7.0",
    "ruamel.yaml==0.17.32",
    "aiohttp~=3.8.4",
    "aiohttp_socks~=0.8.3",
    'ptpython~=3.0.23',
    'rich~=13.6.0',
    "eciespy~=0.4.0",
    "hexbytes~=0.3.1",
    "w3ext @ git+https://github.com/cheewba/w3ext.git@0.0.2#egg=w3ext",
    "lazyplex @ git+https://github.com/cheewba/lazyplex.git@0.0.2#egg=lazyplex",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
w3plex = "w3plex.run:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}